fix: streetmode selector height on mobile

--- a/app/component/StreetModeSelector.scss
+++ b/app/component/StreetModeSelector.scss
@@ -7,4 +7,11 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  height: 60px;
+}
+
+.mobile {
+  .street-mode-selector-container {
+    height: 77px;
+  }
 }
